# backspace_homepage

./: .gitignore  README.md
.github/workflows/: main.yml
backspace-homepage/: Cargo.toml
backspace-homepage/src/handlers/: home_page.rs
backspace-homepage/static/: index.html  styles.css
src/: main.rs
src/handlers/: home_page.rs
static/: index.html
