[package]
name = "backspace-homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.3.1"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.26.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
